--- a/kubernetes/apps/k1s/ingress/certificates/certificates.yaml
+++ b/kubernetes/apps/k1s/ingress/certificates/certificates.yaml
@@ -2,10 +2,10 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "${DOMAIN/./-}"
+  name: "${DOMAIN//./-}"
   namespace: ingress
 spec:
-  secretName: "${DOMAIN/./-}-tls"
+  secretName: "${DOMAIN//./-}-tls"
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
