--- a/kubernetes/apps/shared/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/cert-manager/cert-manager/app/helmrelease.yaml
@@ -30,6 +30,7 @@ spec:
     extraArgs:
       - --dns01-recursive-nameservers=1.1.1.1:53,9.9.9.9:53
       - --dns01-recursive-nameservers-only
+      - --cluster-resource-namespace=flux-system
     podDnsPolicy: None
     podDnsConfig:
       nameservers:
