--- a/ansible/kubernetes/inventory/k0s/group_vars/all/main.yaml
+++ b/ansible/kubernetes/inventory/k0s/group_vars/all/main.yaml
@@ -9,6 +9,7 @@ k3s_server_manifests_templates:
   - custom-cilium-l2.yaml.j2
   - custom-coredns-helmchart.yaml.j2
   - custom-external-secrets-helmchart.yaml.j2
+  - custom-cluster-settings.yaml.j2
 # /var/lib/rancher/k3s/server/manifests
 k3s_server_manifests_urls:
   # Essential Prometheus Operator CRDs (the rest are installed with the kube-prometheus-stack helm release)
