--- a/ansible/kubernetes/inventory/k0s/group_vars/master/main.yaml
+++ b/ansible/kubernetes/inventory/k0s/group_vars/master/main.yaml
@@ -4,7 +4,7 @@ k3s_control_node: true
 k3s_server:
   node-ip: "{{ ansible_host }}"
   tls-san:
-    - "k8s.logfold.com"
+    - "kubernetes.k0s.logfold.com"
     - "192.168.9.8"
   https-listen-port: 6443
   docker: false
