--- a/.taskfiles/flux.yaml
+++ b/.taskfiles/flux.yaml
@@ -12,6 +12,7 @@ tasks:
     deps: [check]
     desc: Flux install
     cmds:
+      - kubectl --context {{.ENVIRONMENT}} apply --server-side --kustomize={{.ROOT_DIR}}/kubernetes/flux/bootstrap
       - kubectl --context {{.ENVIRONMENT}} apply --server-side --kustomize={{.ROOT_DIR}}/kubernetes/flux/config
 
   sync:
