--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -17,6 +17,7 @@ tasks:
       - task vault:init
       - task vault:unseal
       - task vault:enable-k8s-auth
+      - task vault:add-policies
       - task vault:add-roles
       - task vault:add-rootca
       - task vault:add-intca
@@ -99,217 +100,92 @@ tasks:
           starttls=true
       - echo "path \"*\" { capabilities = [\"create\", \"read\", \"update\", \"delete\", \"list\", \"sudo\"] }" | vault policy write admin -
       - vault write auth/ldap/groups/vault-admin policies=admin
-  # k8s auth
+  # k8s auth backend
   enable-k8s-auth:
     desc: configure vault k8s auth
     cmds:
-      # k8s
-      - vault auth disable kubernetes/k8s || true
-      - vault auth enable -path=kubernetes/k8s kubernetes || true
-      - kubectl --context k8s -n kube-system apply -f {{.ROOT_DIR}}/kubernetes/templates/vault-auth.yaml
-      - kubectl --context k8s -n kube-system get secret vault-auth-token -o jsonpath="{.data['ca\.crt']}" | base64 -d > ca.crt
-      - vault write auth/kubernetes/k8s/config
-          token_reviewer_jwt="$(kubectl --context k8s -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
-          kubernetes_host="$(kubectl --context k8s config view --minify | yq e '.clusters[].cluster.server')"
+      - vault auth disable kubernetes/{{.ENVIRONMENT}} || true
+      - vault auth enable -path=kubernetes/{{.ENVIRONMENT}} kubernetes || true
+      - kubectl --context {{.ENVIRONMENT}} -n kube-system apply -f {{.ROOT_DIR}}/kubernetes/templates/vault-auth.yaml
+      - kubectl --context {{.ENVIRONMENT}} -n kube-system get secret vault-auth-token -o jsonpath="{.data['ca\.crt']}" | base64 -d > ca.crt
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/config
+          token_reviewer_jwt="$(kubectl --context {{.ENVIRONMENT}} -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
+          kubernetes_host="$(kubectl --context {{.ENVIRONMENT}} config view --minify | yq e '.clusters[].cluster.server')"
           kubernetes_ca_cert=@ca.crt
           disable_iss_validation=true
       - rm ca.crt
-      # k0s
-      - vault auth disable kubernetes/k0s || true
-      - vault auth enable -path=kubernetes/k0s kubernetes || true
-      - kubectl --context k0s -n kube-system apply -f {{.ROOT_DIR}}/kubernetes/templates/vault-auth.yaml
-      - kubectl --context k0s -n kube-system get secret vault-auth-token -o jsonpath="{.data['ca\.crt']}" | base64 -d > ca.crt
-      - vault write auth/kubernetes/k0s/config
-          token_reviewer_jwt="$(kubectl --context k0s -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
-          kubernetes_host="$(kubectl --context k0s config view --minify | yq e '.clusters[].cluster.server')"
-          kubernetes_ca_cert=@ca.crt
-          disable_iss_validation=true
-      - rm ca.crt
-      # k1s
-      - vault auth disable kubernetes/k1s || true
-      - vault auth enable -path=kubernetes/k1s kubernetes || true
-      - kubectl --context k1s -n kube-system apply -f {{.ROOT_DIR}}/kubernetes/templates/vault-auth.yaml
-      - kubectl --context k1s -n kube-system get secret vault-auth-token -o jsonpath="{.data['ca\.crt']}" | base64 -d > ca.crt
-      - vault write auth/kubernetes/k1s/config
-          token_reviewer_jwt="$(kubectl --context k1s -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
-          kubernetes_host="$(kubectl --context k1s config view --minify | yq e '.clusters[].cluster.server')"
-          kubernetes_ca_cert=@ca.crt
-          disable_iss_validation=true
-      - rm ca.crt
-  add-roles:
-    desc: add k8s roles/policies
+  add-policies:
+    desc: add policies
     cmds:
-      - echo "path \"secret/data/flux-system/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write flux-system -
-      - vault write auth/kubernetes/k8s/role/flux-system
+      - echo -e "path \"pki/int_ca/sign/default\" { capabilities = [\"update\"] }\npath \"secret/data/cert-manager/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write cert-manager -
+      - echo -e "path \"secret/data/database/*\" { capabilities = [\"read\", \"list\"] } " | vault policy write database -
+      - echo -e "path \"secret/data/flux-system/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write flux-system -
+      - echo -e "path \"secret/data/home-automation/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write home-automation -
+      - echo -e "path \"secret/data/ingress/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write ingress -
+      - echo -e "path \"secret/data/kube-system/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write kube-system -
+      - echo -e "path \"secret/data/media/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write media -      
+      - echo -e "path \"secret/data/monitoring/*\" { capabilities = [\"read\", \"list\"] }\npath \"sys/metrics\" { capabilities = [\"read\", \"list\"] }" | vault policy write monitoring -
+      - echo -e "path \"secret/data/security/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write security -
+      - echo -e "path \"secret/data/storage/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write storage -
+      - echo -e "path \"secret/data/volsync/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync -
+  add-roles:
+    desc: add k8s roles
+    cmds:
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/flux-system
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=flux-system
           policies=flux-system,security,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/flux-system
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=flux-system
-          policies=flux-system,security,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/flux-system
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=flux-system
-          policies=flux-system,security,default
-          ttl=1440h
-      - echo "path \"secret/data/database/*\" { capabilities = [\"read\", \"list\"] } " | vault policy write database -
-      - vault write auth/kubernetes/k8s/role/database
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/database
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=database
           policies=volsync,database,media,home-automation,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/database
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=database
-          policies=database,media,home-automation,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/database
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=database
-          policies=database,media,home-automation,default
-          ttl=1440h
-      - echo "path \"secret/data/home-automation/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write home-automation -
-      - vault write auth/kubernetes/k8s/role/home-automation
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/home-automation
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=home-automation
           policies=volsync,database,home-automation,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/home-automation
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=home-automation
-          policies=volsync,database,home-automation,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/home-automation
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=home-automation
-          policies=volsync,database,home-automation,default
-          ttl=1440h
-      - echo "path \"secret/data/media/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write media -
-      - vault write auth/kubernetes/k8s/role/media
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/media
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=media
           policies=media,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/media
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=media
-          policies=media,default
-          ttl=1440h
-      - echo -e "path \"secret/data/monitoring/*\" { capabilities = [\"read\", \"list\"] }\npath \"sys/metrics\" { capabilities = [\"read\", \"list\"] }" | vault policy write monitoring -
-      - vault write auth/kubernetes/k8s/role/monitoring
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/monitoring
           bound_service_account_names=vault-auth,kube-prometheus-stack-prometheus,vmagent-victoria-metrics
           bound_service_account_namespaces=monitoring
           policies=monitoring,flux-system,storage,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/monitoring
-          bound_service_account_names=vault-auth,kube-prometheus-stack-prometheus,vmagent-victoria-metrics
-          bound_service_account_namespaces=monitoring
-          policies=monitoring,flux-system,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/monitoring
-          bound_service_account_names=vault-auth,kube-prometheus-stack-prometheus,vmagent-victoria-metrics
-          bound_service_account_namespaces=monitoring
-          policies=monitoring,flux-system,default
-          ttl=1440h
-      - echo -e "path \"pki/int_ca/sign/default\" { capabilities = [\"update\"] }\npath \"secret/data/cert-manager/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write cert-manager -
-      - vault write auth/kubernetes/k8s/role/cert-manager
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/cert-manager
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=cert-manager
           policies=cert-manager,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/cert-manager
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=cert-manager
-          policies=cert-manager,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/cert-manager
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=cert-manager
-          policies=cert-manager,default
-          ttl=1440h
-      - echo "path \"secret/data/kube-system/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write kube-system -
-      - vault write auth/kubernetes/k8s/role/kube-system
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/kube-system
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=kube-system
           policies=kube-system,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/kube-system
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=kube-system
-          policies=kube-system,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/kube-system
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=kube-system
-          policies=kube-system,default
-          ttl=1440h
-      - echo "path \"secret/data/ingress/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write ingress -
-      - vault write auth/kubernetes/k8s/role/ingress
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/ingress
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=ingress
           policies=ingress,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/ingress
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=ingress
-          policies=ingress,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/ingress
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=ingress
-          policies=ingress,default
-          ttl=1440h
-      - echo "path \"secret/data/volsync/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync -
-      - vault write auth/kubernetes/k8s/role/volsync
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/volsync
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=volsync
           policies=volsync,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/volsync
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=volsync
-          policies=volsync,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/volsync
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=volsync
-          policies=volsync,default
-          ttl=1440h
-      - echo "path \"secret/data/security/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write security -
-      - vault write auth/kubernetes/k0s/role/security
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/security
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=security
           policies=security,default
-          ttl=1440h
-      - vault write auth/kubernetes/k8s/role/security
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=security
-          policies=security,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/security
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=security
-          policies=security,default
-          ttl=1440h
-      - echo "path \"secret/data/storage/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write storage -
-      - vault write auth/kubernetes/k8s/role/storage
+          ttl=1h
+      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/storage
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=storage
           policies=security,storage,default
-          ttl=1440h
-      - vault write auth/kubernetes/k0s/role/storage
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=storage
-          policies=security,storage,default
-          ttl=1440h
-      - vault write auth/kubernetes/k1s/role/storage
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=storage
-          policies=security,storage,default
-          ttl=1440h
+          ttl=1h
   # kv
   disable-kv:
     desc: disable kv secrets engine
