--- a/kubernetes/apps/shared/security/oauth2-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/shared/security/oauth2-proxy/app/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
         cookie_samesite = "lax"
         cookie_httponly = true
         cookie_name = "_nucstack_oauth"
-        cookie_domains = [ ".nucstack.com", ".logfold.com", ".k0s.logfold.com", ".k1s.logfold.com" ".k8s.logfold.com" ]
+        cookie_domains = [ ".nucstack.com", ".logfold.com", ".k0s.logfold.com", ".k1s.logfold.com", ".k8s.logfold.com" ]
         cookie_refresh = "1h"
         cookie_secure = true
         email_domains = [ '*' ]
@@ -62,4 +62,4 @@ spec:
         ssl_insecure_skip_verify = false
         standard_logging = true
         upstreams = [ "static://200" ]
-        whitelist_domains = [ ".nucstack.com", ".logfold.com", ".k0s.logfold.com", ".k1s.logfold.com" ".k8s.logfold.com"  ]
+        whitelist_domains = [ ".nucstack.com", ".logfold.com", ".k0s.logfold.com", ".k1s.logfold.com", ".k8s.logfold.com"  ]
