--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -50,17 +50,28 @@ spec:
                   - app.immich:/
                   - https://immich.nucstack.com/auth/login
                   - https://immich.nucstack.com/user-settings
-              - id: oauth2-proxy
+              - id: k8s-oauth2-proxy
                 name: oauth2-proxy
                 secret: "{{.OAUTH2_CLIENT_SECRET}}"
                 public: true
                 redirectURIs:
                   - "https://oauth.nucstack.com/oauth2/callback"
-              - id: weave-gitops
+              - id: k8s-weave-gitops
                 name: weave-gitops
                 secret: "{{.GITOPS_CLIENT_SECRET}}"
                 redirectURIs:
-                  - https://gitops.nucstack.com/oauth2/callback                 
+                  - https://gitops.nucstack.com/oauth2/callback
+              - id: k1s-oauth2-proxy
+                name: oauth2-proxy
+                secret: "{{.OAUTH2_CLIENT_SECRET}}"
+                public: true
+                redirectURIs:
+                  - "https://oauth.k1s.logfold.com/oauth2/callback"
+              - id: k1s-weave-gitops
+                name: weave-gitops
+                secret: "{{.GITOPS_CLIENT_SECRET}}"
+                redirectURIs:
+                  - https://gitops.k1s.logfold.com/oauth2/callback
   dataFrom:
     - extract:
         key: /security/lldap
