--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -51,24 +51,37 @@ spec:
                   - https://immich.nucstack.com/auth/login
                   - https://immich.nucstack.com/user-settings
               - id: k8s-oauth2-proxy
-                name: oauth2-proxy
+                name: k8s-oauth2-proxy
                 secret: "{{.OAUTH2_CLIENT_SECRET}}"
                 public: true
                 redirectURIs:
                   - "https://oauth.nucstack.com/oauth2/callback"
               - id: k8s-weave-gitops
-                name: weave-gitops
+                name: k8s-weave-gitops
                 secret: "{{.GITOPS_CLIENT_SECRET}}"
                 redirectURIs:
                   - https://gitops.nucstack.com/oauth2/callback
+
+              - id: k0s-oauth2-proxy
+                name: k0s-oauth2-proxy
+                secret: "{{.OAUTH2_CLIENT_SECRET}}"
+                public: true
+                redirectURIs:
+                  - "https://oauth.k0s.logfold.com/oauth2/callback"
+              - id: k0s-weave-gitops
+                name: k0s-weave-gitops
+                secret: "{{.GITOPS_CLIENT_SECRET}}"
+                redirectURIs:
+                  - https://gitops.k0s.logfold.com/oauth2/callback
+
               - id: k1s-oauth2-proxy
-                name: oauth2-proxy
+                name: k1s-oauth2-proxy
                 secret: "{{.OAUTH2_CLIENT_SECRET}}"
                 public: true
                 redirectURIs:
                   - "https://oauth.k1s.logfold.com/oauth2/callback"
               - id: k1s-weave-gitops
-                name: weave-gitops
+                name: k1s-weave-gitops
                 secret: "{{.GITOPS_CLIENT_SECRET}}"
                 redirectURIs:
                   - https://gitops.k1s.logfold.com/oauth2/callback
