--- a/kubernetes/apps/k0s/security/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/oauth2-proxy/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       type: Opaque
       engineVersion: v2
       data:
-        client-id: "oauth2-proxy"
+        client-id: "${ENVIRONMENT}-oauth2-proxy"
         client-secret: "{{.OAUTH2_CLIENT_SECRET}}"
         cookie-secret: "{{.OAUTH2_COOKIE_SECRET}}"
   dataFrom:
