--- a/kubernetes/apps/k2s/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/k2s/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -75,15 +75,15 @@ spec:
             devices:
               - name: /dev/disk/by-id/scsi-0QEMU_QEMU_HARDDISK_drive-scsi1
     cephBlockPools:
-      - name: ceph-blockpool
+      - name: ceph-pool
         spec:
           failureDomain: host
           replicated:
             size: 3
         storageClass:
           enabled: true
-          name: ceph-block
-          isDefault: true
+          name: ceph-pool
+          isDefault: false
           reclaimPolicy: Delete
           allowVolumeExpansion: true
           parameters:
