--- a/kubernetes/apps/k2s/home-automation/esphome/app/volsync.yaml
+++ b/kubernetes/apps/k2s/home-automation/esphome/app/volsync.yaml
@@ -38,7 +38,7 @@ spec:
     cacheCapacity: 8Gi
     cacheStorageClassName: local-path
     volumeSnapshotClassName: csi-ceph-blockpool
-    storageClassName: ceph-block
+    storageClassName: ceph-pool
     retain:
       daily: 7
       within: 3d
