--- a/kubernetes/apps/k2s/home-automation/unifi-downloader/app/helmrelease.yaml
+++ b/kubernetes/apps/k2s/home-automation/unifi-downloader/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
                 - path: /download
               accessMode: ReadWriteOnce
               size: 20Gi
-              storageClass: ceph-block
+              storageClass: ceph-pool
         pod:
           securityContext:
             fsGroup: 1001
