--- a/kubernetes/apps/k2s/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/k2s/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -43,7 +43,7 @@ spec:
                 - path: /usr/src/app/store
               accessMode: ReadWriteOnce
               size: 1Gi
-              storageClass: ceph-block
+              storageClass: ceph-pool
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
