--- a/kubernetes/apps/k2s/home-automation/kustomization.yaml
+++ b/kubernetes/apps/k2s/home-automation/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./esphome/ks.yaml
-  - ./home-assistant/ks.yaml
-  - ./tidbyt-proxy/ks.yaml
-  - ./unifi-downloader/ks.yaml
-  - ./zwave-js-ui/ks.yaml
+  # - ./esphome/ks.yaml
+  # - ./home-assistant/ks.yaml
+  # - ./tidbyt-proxy/ks.yaml
+  # - ./unifi-downloader/ks.yaml
+  # - ./zwave-js-ui/ks.yaml
