--- a/kubernetes/apps/k2s/database/kustomization.yaml
+++ b/kubernetes/apps/k2s/database/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./emqx/ks.yaml
-  - ./influxdb/ks.yaml
+  #- ./emqx/ks.yaml
+  #- ./influxdb/ks.yaml
   - ./redis/ks.yaml
