--- a/kubernetes/apps/k2s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/k2s/home-automation/home-assistant/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
                 - path: /config
               accessMode: ReadWriteOnce
               size: 5Gi
-              storageClass: ceph-pool
+              storageClass: local-path
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
