Revert "flip to local-path"
This reverts commit 1c49dcc224b3861df2bacaf52bfa92bf19d1669b.

--- a/kubernetes/apps/k2s/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/k2s/home-automation/home-assistant/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
                 - path: /config
               accessMode: ReadWriteOnce
               size: 5Gi
-              storageClass: local-path
+              storageClass: ceph-pool
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
