--- a/kubernetes/apps/k2s/media/immich/app/typesense/helmrelease.yaml
+++ b/kubernetes/apps/k2s/media/immich/app/typesense/helmrelease.yaml
@@ -83,7 +83,7 @@ spec:
                 - path: /config
               accessMode: ReadWriteOnce
               size: 5Gi
-              storageClass: local-path
+              storageClass: ceph-pool
     service:
       main:
         ports:
